tests/baselines/reference/nodeModulesImportAttributesTypeModeDeclarationEmit(module=nodenext).errors.txt
/index.ts(3,62): error TS2694: Namespace '"/node_modules/pkg/require"' has no exported member 'ImportInterface'.
/index.ts(6,89): error TS2694: Namespace '"/node_modules/pkg/require"' has no exported member 'ImportInterface'.


==== /index.ts (2 errors) ====
    export type LocalInterface =
        & import("pkg", { with: {"resolution-mode": "require"} }).RequireInterface
        & import("pkg", { with: {"resolution-mode": "import"} }).ImportInterface;
                                                                 ~~~~~~~~~~~~~~~
!!! error TS2694: Namespace '"/node_modules/pkg/require"' has no exported member 'ImportInterface'.
    
    export const a = (null as any as import("pkg", { with: {"resolution-mode": "require"} }).RequireInterface);
    export const b = (null as any as import("pkg", { with: {"resolution-mode": "import"} }).ImportInterface);
                                                                                            ~~~~~~~~~~~~~~~
!!! error TS2694: Namespace '"/node_modules/pkg/require"' has no exported member 'ImportInterface'.
    
==== /node_modules/pkg/package.json (0 errors) ====
    {
        "name": "pkg",
        "version": "0.0.1",
        "exports": {
            "import": "./import.js",
            "require": "./require.js"
        }
    }
==== /node_modules/pkg/import.d.ts (0 errors) ====
    export interface ImportInterface {}
==== /node_modules/pkg/require.d.ts (0 errors) ====
    export interface RequireInterface {}